--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,6 +10,12 @@ input[type="text"] {
   background: #ccc;
 }
 
+.loading-icon {
+  position: absolute;
+  left: 50%;
+  top: 10px;
+}
+
 
 .narrow-button {
   float: left;
